# multidriver-swg

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  architecture.md  environment.yaml  mkdocs.yml  pyproject.toml
.github/workflows/: publish.yml
.prompts/: architecture.md  conventions.md  implementation_plan.md  proceed_with_implementation.md  qaqc_and_commit.md
.scratch/: creation_log.md
_old_code_to_refactor/: __ref_ams_functions.py  _a2_dwnld_aorc_pre_mrms.py  _a_dwnld_and_process_water-level-data.py  _b2_event_selection.py  _b3_event_analysis.py  _b4_selecting_marginals.py  _b5_fit_vine_copulas.py  _b6_simulate_from_vincop.py  _b7.1_qaqc_simulated_events.py  _b7_generate_time_series_from_event_stats.py  _b_gen_wshed-precip-tseries-from-mrms.py  _inputs.py  _utils.py
docs/: api.md  index.md  installation.md  usage.md
docs/planning/: README.md
docs/planning/ideas/: invoke_specialist_refined.md
docs/planning/refactors/: 2026-03-14_refactor_plan_audit.md
docs/planning/refactors/2026-03-01_full_codebase_refactor/: full_codebase_refactor.md
docs/planning/refactors/2026-03-01_full_codebase_refactor/work_chunks/: 00_data_input_inventory.md  01A_exceptions_and_constants.md  01B_pydantic_config_model.md  01C_io_data_acquisition.md  01D_io_event_data_and_output.md  01E_input_validation.md  01F_test_infrastructure.md  02A_distribution_fitting.md  02B_event_selection.md  02C_event_analysis_and_copula.md  02D_simulation_and_rescaling.md  (+6 more)
scripts/: check_doc_freshness.py
src/multidriver_swg/: __init__.py
